Hide overflow content within ingredient choice selection, to prevent the appearance of scrollbars

--- a/src/app/views/explore.css
+++ b/src/app/views/explore.css
@@ -9,6 +9,7 @@
 
 #explore-choices {
   list-style-type: none;
+  overflow: hidden;
 }
 
 #explore-choices li {
